--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,34 @@
 absl-py==0.11.0
 aniso8601==7.0.0
+apturl==0.5.2
 asgiref==3.2.10
 astunparse==1.6.3
+attrs==19.3.0
+Automat==0.8.0
+bcrypt==3.1.7
+blinker==1.4
+Brlapi==0.7.0
+cachetools==4.2.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+cloud-init==20.4
+cm-rgb==0.3.4
+colorama==0.4.3
+command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
+cupshelpers==1.0
 dbus-python==1.2.16
 decorator==4.4.2
+defer==1.0.6
 Deprecated==1.2.10
 distro==1.4.0
+distro-info===0.23ubuntu1
 Django==3.1.2
 django-autocomplete-light==3.8.1
+duplicity==0.8.12.0
 entrypoints==0.3
 fasteners==0.14.1
 flatbuffers==1.12
@@ -39,10 +57,12 @@ jsonpointer==2.0
 jsonschema==3.2.0
 Keras-Preprocessing==1.1.2
 keyring==18.0.1
+language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 lockfile==0.12.2
+louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
 Markdown==3.3.3
@@ -84,7 +104,9 @@ pyparsing==2.4.6
 pyRFC3339==1.1
 pyrsistent==0.15.5
 pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.3
 python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
 pytz==2020.1
 pyxdg==0.26
 PyYAML==5.3.1
@@ -102,6 +124,7 @@ service-identity==18.1.0
 simplejson==3.16.0
 six==1.15.0
 sklearn==0.0
+sos==4.0
 sqlparse==0.4.1
 ssh-import-id==5.10
 systemd-python==234
@@ -115,9 +138,15 @@ testresources==2.0.1
 threadpoolctl==2.1.0
 Twisted==18.9.0
 typing-extensions==3.7.4.3
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.25.8
+usb-creator==0.3.7
 wadllib==1.3.3
 Werkzeug==1.0.1
 wrapt==1.12.1
+xkit==0.0.0
 zipp==1.0.0
 zope.interface==4.7.1
